syntax = "proto3";
package seatlect;

option go_package = "internal/genproto/commonpb";

message User {
  string username = 1;
  string dob = 2;
  string avatar = 3;
  repeated string preference = 4;
  repeated string favorite = 5;
}

message Business {
  string _id = 1;
  string name = 2;
  repeated string tags = 3;
  string description = 4;
  Latlng location = 5;
  string address = 6;
  string displayImage = 7;
  repeated string images = 8;
  repeated MenuItem menu = 9;
}

message Latlng {
  double latitude = 1;
  double longitude = 2;
}

message MenuItem {
  string name = 1;
  string description = 2;
  string image = 3;
  string price = 4;
}

message Order {
  string _id =  1;
  string reservationId = 2;
  string businessId = 3;
  string start = 4;
  string end = 5;
  repeated string seats = 6;
  repeated Preorder preorder = 7;
  string price = 8;
  string totalPrice = 9;
  string status = 10;
  string image = 11;
}

message Preorder {
  string name = 1;
  string description = 2;
  string image = 3;
  string price = 4;
  int32 quantity = 5;
}