syntax = "proto3";
package seatlect;

option go_package = "internal/genproto/userpb";

import "common.proto";

service UserService {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
}

// For SigIn endpoint
message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string refreshToken = 1;
  string jwtToken = 2;
  User user = 3;
}

// For SignUp endpoint
message SignUpRequest {
  string username = 1;
  string password = 2;
  string dob = 3;
}

message SignUpResponse {
  string refreshToken = 1;
  string jwtToken = 2;
  User user = 3;
}
